# space-hub

./: README.md  package.json  readme.md
containers/: docker-compose.dev.yaml
containers/api/: Dockerfile.dev  Dockerfile.prod
containers/database/: Dockerfile.dev
containers/frontend/: Dockerfile.dev  Dockerfile.prod
scripts/: dev.sh
services/.config/server/: nginx.dev.conf
services/api/: README.md  package-lock.json  package.json  readme.md
services/api/src/shared/container/: index.ts
services/api/src/shared/infra/typeorm/migrations/: 1618080143581-CreatePackages.ts  1618086101694-CreateRepositories.ts
services/frontend/: README.md
services/frontend/src/pages/Dashboard/: index.tsx  styles.ts
services/processdata/: .gitignore  README.md  pyproject.toml
services/processdata/processdata/: server.py
services/processdata/processdata/classes/: rabbitmq_channel.py  rabbitmq_connection.py  rabbitmq_tornado.py
services/processdata/processdata/services/: read_sheet.py
services/processdata/tests/: test_processdata.py
